src/objects/Phase_Code_Bucket_Categories__c.object
<CustomObject>
    <description>Phase Code Bucket Categories</description>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <description>Actual Cost
from Oracle</description>
        <label>Actual Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Margin__c</fullName>
        <formula>(Project__r.Contract_Sum_to_Date__c - Actual_Cost__c )/Project__r.Contract_Sum_to_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C_O__c</fullName>
        <label>C.O</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Budget__c</fullName>
        <description>Original Budget -from Oracle</description>
        <label>Original Budget</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Collected__c</fullName>
        <label>Payment Collected</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phase_Code__c</fullName>
        <description>Phase Code Bucket Categories
updated from Oracle</description>
        <label>Phase Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subcontract: Controls</fullName>
                </value>
                <value>
                    <fullName>Subcontract: Electrical</fullName>
                </value>
                <value>
                    <fullName>Subcontract: Mechanical</fullName>
                </value>
                <value>
                    <fullName>Subcontract: Structural &amp; Insulation</fullName>
                </value>
                <value>
                    <fullName>Tech &amp; Mgmt Svcs: McQuay Other</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Bonds, Insurance, Legal &amp; Permits</fullName>
                </value>
                <value>
                    <fullName>Tech &amp; Mgmt Svcs: McQuay Travel &amp; Expenses</fullName>
                </value>
                <value>
                    <fullName>Tech &amp; Mgmt Svcs: McQuay Service</fullName>
                </value>
                <value>
                    <fullName>Tech &amp; Mgmt Svcs: McQuay Misc Expenses</fullName>
                </value>
                <value>
                    <fullName>Site, Safety, Demo, Rentals &amp; Other</fullName>
                </value>
                <value>
                    <fullName>Tech &amp; Mgmt Svcs: McQuay Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Project Ext Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Phase Code Bucket Categories</relationshipLabel>
        <relationshipName>Phase_Code_Bucket_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Projected_Budget__c</fullName>
        <description>Projected Budget -from Oracle</description>
        <label>Projected Budget</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Projected Cost
from Oracle</description>
        <label>Actual Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Over_Under__c</fullName>
        <description>Projected Over/Under -from Oracle</description>
        <label>Projected Over/Under</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Under_Over__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Projected Under/Over -from Oracle</description>
        <label>Projected Over/Under</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Re_estimate__c</fullName>
        <label>Re-estimate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revised_Budget__c</fullName>
        <label>Revised Budget</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Ext Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Phase Code Bucket Categories</label>
    <nameField>
        <label>Phase Code Bucket Categories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phase Code Bucket Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>